# cc-gateway-desktop

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.yaml  package.json
.github/: repo-meta.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/05-ts-backend-capability-inventory/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CAPABILITY-INVENTORY.md  05-ISOLATION-BOUNDARY.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-standalone-cli-scaffold-credential-discovery/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/07-local-environment-construction-runtime-preparation/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-VALIDATION.md
.planning/phases/08-claude-launch-handoff/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-RESEARCH.md  08-VALIDATION.md
.planning/phases/09-validation-operator-guidance/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-RESEARCH.md  09-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: canonical-profile.example.json  canonical-profile.schema.json
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  daemon.rs  install.rs  launcher.rs  lib.rs  main.rs  shell.rs  test_support.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  config.rs  lib.rs  logger.rs  oauth.rs  proxy_agent.rs
crates/core/src/rewriter/: env.rs  headers.rs  identity.rs  mod.rs  prompt.rs
crates/core/tests/: config_integration.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs  server.rs
crates/daemon/tests/: daemon.rs
crates/desktop/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/desktop/src/: App.tsx  api.ts
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/src/: commands.rs  daemon.rs  main.rs  settings.rs
crates/desktop/src/i18n/: index.ts
crates/desktop/src/i18n/locales/: en.json  zh-CN.json
crates/desktop/src/status/: StateMarker.tsx  StatusTab.tsx  dashboard.test.tsx  notifications.ts  types.ts  useHealthDashboard.ts
docs/: standalone-cli.md
scripts/: admin-setup.sh  quick-setup.sh
src/: config.ts  oauth.ts  proxy.ts  rewriter.ts
standalone-cli/: README.md  package.json  tsconfig.json
standalone-cli/scripts/: build-gateway-bundle.mjs
standalone-cli/src/: cli.ts  index.ts  output.ts
standalone-cli/src/credential-discovery/: discover.ts  parse.ts  types.ts
standalone-cli/src/credential-discovery/sources/: credentials-file.ts  keychain.ts
standalone-cli/src/environment/: bootstrap.ts  config-render.ts  identity.ts  manifest.ts  prepare.ts  proxy-env.ts  runtime.ts  tokens.ts  types.ts  workspace.ts
standalone-cli/src/launch/: claude.ts
standalone-cli/tests/: capability-inventory.test.ts  claude-launch.test.ts  cli-help.test.ts  credential-discovery.test.ts  environment-bootstrap.test.ts  operator-guidance.test.ts  proxy-env.test.ts  run-all.ts  runtime-preparation.test.ts
standalone-cli/tests/fixtures/credential-discovery/: file-valid.json  keychain-valid.json
standalone-cli/tests/helpers/: launch-spy.ts  temp-workspace.ts
tests/: config.test.ts  oauth.test.ts  parity-checklist.md  rewriter.test.ts
