[package]
name = "ccgw-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"
