[package]
name = "ccgw-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ccgw-daemon"
path = "src/main.rs"

[dependencies]
ccgw-core = { path = "../core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
