[package]
name = "ccgw-desktop"
version.workspace = true
description = "CC Gateway Desktop"
edition.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-notification = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ccgw-core = { path = "../../core" }
reqwest = { workspace = true }
which = "6.0"
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]